--- a/SecondTask/Base.lproj/Main.storyboard
+++ b/SecondTask/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -45,21 +46,42 @@
                                     <action selector="myButtonAction:" destination="BYZ-38-t0r" eventType="touchDown" id="eaf-qc-6m7"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FiI-BH-rea">
+                                <rect key="frame" x="5" y="534" width="383" height="279"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uDG-7U-VFD">
+                                        <rect key="frame" x="20" y="20" width="343" height="239"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="uDG-7U-VFD" secondAttribute="bottom" constant="20" id="4vN-Be-cwu"/>
+                                    <constraint firstItem="uDG-7U-VFD" firstAttribute="leading" secondItem="FiI-BH-rea" secondAttribute="leading" constant="20" id="E9z-Fs-RfP"/>
+                                    <constraint firstAttribute="trailing" secondItem="uDG-7U-VFD" secondAttribute="trailing" constant="20" id="hxL-GA-2mI"/>
+                                    <constraint firstItem="uDG-7U-VFD" firstAttribute="top" secondItem="FiI-BH-rea" secondAttribute="top" constant="20" id="ugA-MY-TUj"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="FiI-BH-rea" firstAttribute="top" secondItem="CgF-EF-ghu" secondAttribute="bottom" constant="25" id="442-DG-vkp"/>
+                            <constraint firstItem="FiI-BH-rea" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="4j5-Zh-9s2"/>
                             <constraint firstItem="dds-0J-EJP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EwK-IP-48U"/>
                             <constraint firstItem="CgF-EF-ghu" firstAttribute="top" secondItem="dds-0J-EJP" secondAttribute="bottom" constant="200" id="HhR-bY-P1I"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CgF-EF-ghu" secondAttribute="trailing" constant="50" id="dua-zl-0bd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FiI-BH-rea" secondAttribute="bottom" constant="5" id="mWB-Xs-N0b"/>
                             <constraint firstItem="dds-0J-EJP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="oqI-wi-Mh8"/>
                             <constraint firstItem="CgF-EF-ghu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="sXW-Dg-fLQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FiI-BH-rea" secondAttribute="trailing" constant="5" id="xP7-Vd-qlc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dds-0J-EJP" secondAttribute="trailing" id="xSl-0Z-hxh"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="currentView" destination="8bC-Xf-vdC" id="L7l-g0-UbM"/>
+                        <outlet property="imageView" destination="uDG-7U-VFD" id="TEs-bc-qqu"/>
                         <outlet property="myButton" destination="CgF-EF-ghu" id="Psj-wd-R7I"/>
+                        <outlet property="myLable" destination="dds-0J-EJP" id="Wg8-7C-t7D"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -72,7 +94,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.1960784314" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
